--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.3.0</version>
+                <configuration>
+                    <minimizeJar>true</minimizeJar>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -80,6 +83,13 @@
             <version>2.13.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-swing</artifactId>
+            <version>5.2</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
